--- a/auroras_of_jupiter.html
+++ b/auroras_of_jupiter.html
@@ -2,26 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>The Auroras of Jupiter</title>
 <link href="styles.css" type="text/css" rel="stylesheet" />
+<meta name="description" content="Experience the Mighty Auroras of Jupiter with new findings from NASA's Hubble Telescope and Juno Spacecraft." />
 </head>
 
 <body>
-
 <div class="container">
-    <div class="header">
-    	<img src="images/jupiter_header.jpg" border="0" alt="Experience the Mighty Auroras of Jupiter" />
-    </div>   
-    <div class="content">
-        <img src="images/space_tourism_jupiter.png" border="0" alt="Space Tourism - See the Auroras" class="img_right" />
-        <p>THE KING OF THE PLANETS</p>
-        <p>Jupiter, the largest planet in the solar system, is best known for its colorful storms, the most famous being the Great Red Spot.</p>         
-        <p>Now astronomers have focused on another beautiful feature of the planet, using the ultraviolet capabilities of NASA's Hubble Space 
-        Telescope and supported by measurements made by NASA's Juno spacecraft.</p>        
-        <p>The Jovian Infrared Auroral Mapper (JIRAM), captured views of Jupiter's north and south poles in infrared light, 
-        revealing hot spots that had never been seen before.</p>
-        <p>&nbsp;</p>
-    </div>
+  <div class="header"> <a href="auroras_of_jupiter.html"><img src="images/jupiter_header.jpg" border="0" alt="Experience the Mighty Auroras of Jupiter" /></a> </div>
+  <div class="content"> <a href="http://www.youtube.com/watch?v=sd0MpTRpa7E" target="_blank"><img src="images/space_tourism_jupiter.png" border="0" alt="Space Tourism - See the Auroras" class="img_right" /></a>
+    <h1>THE KING OF THE PLANETS</h1>
+    <p>Jupiter, the largest planet in the solar system, is best known for its colorful storms, the most famous being the Great Red Spot.</p>
+    <p>Now astronomers have focused on another beautiful feature of the planet, using the ultraviolet capabilities of <strong>NASA's Hubble Space 
+      Telescope</strong> and supported by measurements made by <strong>NASA's Juno spacecraft.</strong></p>
+    <p>The Jovian Infrared Auroral Mapper (JIRAM), captured views of Jupiter's north and south poles in infrared light, 
+      revealing hot spots that had never been seen before.</p>
+    <h2>VIVID LIGHT SHOWS</h2>
+    <p>The extraordinary  vivid glows shown in the new observations are known as auroras. They are created  when <a href="https://en.wikipedia.org/wiki/Particle_physics" target="_blank">high-energy particles</a> enter a planet's atmosphere near its magnetic poles  and collide with atoms of gas. As well as producing beautiful images, this  program aims to determine how various components of Jupiter's auroras respond  to different conditions in the solar wind, a stream of charged particles  ejected from the Sun.</p>
+    <p>Not only are the  auroras huge in size, they are also hundreds of times more energetic than  auroras on Earth. And, unlike those on Earth, they never cease. While on Earth  the most intense auroras are caused by <a href="https://en.wikipedia.org/wiki/Geomagnetic_storm" target="_blank">solar storms</a> -- when charged particles  rain down on the upper atmosphere, excite gases, and cause them to glow red, green,  and purple -- Jupiter has an additional source for its auroras.</p>
+    <p>The strong  magnetic field of the gas giant grabs charged particles from its surroundings.  This includes not only the changed particles within the solar wind, but also the  particles thrown into space by its orbiting moon <a href="http://solarsystem.nasa.gov/planets/io" target="_blank">Io</a>, known for its numerous and  large volcanoes.</p>
+    <hr />
+    <p><em>Copy provided by NASA, Imagery courtesy of the Nasa Space Tourism Program.<br />
+      <a href="mailto:rglynn@studnet.sjcny.edu">Rory Glynn</a> COM205 Fall 2019<br />
+    <!-- #BeginDate format:Am1 -->September 26, 2019<!-- #EndDate -->    </em></p>
+  </div>
 </div>
 </body>
 </html>
